Estilos de asistencia

--- a/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
@@ -38,9 +38,8 @@
             </div>
         </ul>
   </div>
-</nav><br>
+</nav>
 <div class="container">
-  <h2 class="titulo">Obtener Asistencia</h2> 
   <form (ngSubmit)="submitForm()" #form="ngForm" class="input-container"> 
     <div class="form-group"> 
       <label for="fecha">Fecha:</label> 
