--- a/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
@@ -12,13 +12,13 @@
               <a routerLink="/vista-instructor" class="nav-link" aria-current="page">Inicio</a>
             </li>
             <li class="nav-item">
-              <a routerLink="/actividad" class="nav-link">Actividades</a>
-            </li>
-            <li class="nav-item">
               <a routerLink="/blog" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-              <a routerLink="/asistencia" class="nav-link">Asistencias</a>
+              <a routerLink="/horario" class="nav-link">Horarios</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/actividad" class="nav-link">Actividades</a>
             </li>
             <div class="dropdown">
               <button class="dropdown-button" (click)="toggleProfileMenu()">
@@ -43,23 +43,28 @@
   <form (ngSubmit)="submitForm()" #form="ngForm" class="input-container"> 
     <div class="form-group"> 
       <label for="fecha">Fecha:</label> 
-      <input type="date" [(ngModel)]="newAsistencia.fecha" name="fecha" class="form-control" required> 
+      <input type="date" [(ngModel)]="newAsistencia.fecha" name="fecha" class="form-control" required max="{{ getCurrentDate() }}"> 
     </div> 
     <div class="form-group"> 
       <label for="fichaSelect">Seleccionar ficha:</label> 
-      <select id="fichaSelect" [(ngModel)]="selectedFicha" name="fichaSelect" class="form-control"> 
+      <select id="fichaSelect" [(ngModel)]="selectedFicha" name="fichaSelect" class="form-control">
+        <option value="" disabled selected>Seleccione ficha</option>
         <option *ngFor="let ficha of fichas" [value]="ficha.identificador">{{ ficha.numeroFicha }}</option>
       </select>
     </div>
     <button type="submit" class="btn btn-primary boton-small">Obtener Asistencia</button>
   </form>
 </div>
+
 <div class="container mt-5">
   <h2 class="subtitulo">Asistencias</h2>
   <div class="container-table">
     <div *ngIf="errorMensaje" class="alert alert-danger" role="alert">
       {{ errorMensaje }}
-    </div>        
+    </div>  
+    <div *ngIf="sinEstudiantes && !errorMensaje" class="alert alert-warning" role="alert">
+      No se encontraron aprendices asociados a la ficha proporcionada.
+    </div>
     <table #tablaAsistencias class="table" *ngIf="asistenciaList.length > 0">
       <thead>
         <tr>
