--- a/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
@@ -23,12 +23,47 @@
   text-align: center;
 }
 
+.foto-container {
+  position: relative;
+  overflow: hidden;
+}
+
 .foto {
-  max-width: 250px;
+  width: 250px;
+  height: 250px;
+  min-width: 250px;
+  min-height: 250px;
   margin-left: -400px;
   margin-top: 30px;
   border: 1px solid #ccc;
   border-radius: 50%;
+  transition: box-shadow 0.3s ease, filter 0.3s ease;
+  position: relative;
+}
+
+.foto:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  filter: brightness(80%);
+}
+
+.eliminar-icono {
+  position: absolute;
+  top: 55%;
+  left: 24%;
+  transform: translate(-50%, -50%);
+  color:#5a0707;
+  background-color: rgba(255, 255, 255, 0.457);
+  padding: 5px;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease; 
+  z-index: 10;
+}
+
+.foto-container:hover .eliminar-icono {
+  opacity: 1;
+  visibility: visible; 
 }
 
 .information{
@@ -285,4 +320,11 @@ span {
 
 .boton:hover .texto-oculto {
   visibility: hidden;
+}
+
+.eliminar-icono,
+.cambiar-foto,
+.editar,
+.cambiar-contrasena {
+  cursor: pointer;
 }
