pruebas tabla asistencia

--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
@@ -44,3 +44,22 @@
   <div class="graficoUno">
     <div class="chart" id="chart"></div>
   </div>
+<div class="table-container">
+    <table>
+        <thead>
+            <tr>
+                <th>Fecha</th>
+                <th>Asistencia</th> 
+                <th>Instructor</th>
+            </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let asistencia of asistencias"> 
+                <td>{{ asistencia.fecha }}</td>
+                <td>{{ asistencia.status }}</td>
+                <td>{{ asistencia.nombreInstructor }}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
