--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
@@ -302,3 +302,28 @@ td {
     white-space: nowrap; /* Evita el colapso del texto en celdas pequeñas */
   }
 }
+
+// FILTRO
+/* ver-asistencia.component.scss */
+
+.fechaFiltro {
+  align-items: center;
+  margin-bottom: 20px; 
+}
+
+ input[type="date"] {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 10px; 
+}
+ button {
+  padding: 8px 16px;
+  background-color: #57a7a5; 
+  color: #fff; /* Color del texto blanco */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 5Px;
+}
+
