--- a/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.css
@@ -41,18 +41,14 @@
   position: relative;
 }
 
-.foto:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  filter: brightness(80%);
-}
 
 .eliminar-icono {
   position: absolute;
   top: 55%;
   left: 24%;
   transform: translate(-50%, -50%);
-  color:#5a0707;
-  background-color: rgba(255, 255, 255, 0.457);
+  color:#ffffff;
+  background-color: rgba(36, 35, 35, 0.789);
   padding: 5px;
   border-radius: 5px;
   opacity: 0;
@@ -61,9 +57,20 @@
   z-index: 10;
 }
 
-.foto-container:hover .eliminar-icono {
+.foto-container:hover .foto:hover + .eliminar-icono,
+.eliminar-icono:hover {
   opacity: 1;
-  visibility: visible; 
+  visibility: visible;
+}
+
+.foto-container:hover .foto {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  filter: brightness(90%);
+}
+
+.foto-container:hover .foto:not(:hover) {
+  box-shadow: none;
+  filter: brightness(100%);
 }
 
 .information{
