--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -35,12 +35,12 @@
                   <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
                 </li>
               </div>
-            </div> 
+            </div>
         </ul>
   </div>
 </nav>
 <h1 class="titulo">Bienvenido aprendiz</h1>
-<h4 class="sub-titulo">Formacion ADSO</h4>
+<h4 class="sub-titulo">Formación ADSO</h4>
   <div class="descripción">
     <p>Bienvenido a ACANNER, una plataforma que busca mejorar la gestión del tiempo y el control de tus actividades pendientes. Destacamos por nuestra colaboración con el SENA (Servicio Nacional de Aprendizaje), lo que te proporciona acceso a recursos educativos para impulsar tu desarrollo personal y profesional.</p>
   </div>
