nueva tabla con grafico

--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-aprendices/fichas-aprendices.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-aprendices/fichas-aprendices.component.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
 
 body {
   font-family: Roboto, sans-serif;
@@ -27,6 +28,7 @@ body {
 }
 
 .titulos {
+  font-family: "Comfortaa", sans-serif;
   margin-bottom: 15px;
   font-size: 28px;
   color: #088a88;
