--- a/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.scss
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Comfortaa", sans-serif;
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -18,14 +22,16 @@ body {
 
 .container-user {
   width: 90%;
-  padding: 20px;
+  padding: 30px;
   display: flex;
   justify-content: space-evenly;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 h1{
+  font-family: "Comfortaa", sans-serif;
   color: #088a88;
+  font-size: 28px;
 }
 
 .photo {
@@ -46,6 +52,7 @@ h1{
 }
 
 .bold-p {
+  font-family: "Comfortaa", sans-serif;
   font-weight: bold;
   font-size: 17px;
 }
@@ -119,19 +126,51 @@ h1{
   }
 
   .photo {
-    width: 250px; /* Ajusta el tamaño de la foto para resoluciones aún más pequeñas */
+    width: 250px;
     height: 250px;
-    margin-top: 20px; /* Agrega espacio entre la foto y la información en resoluciones más pequeñas */
+    margin-top: 20px;
+    border: 2px solid #088a88;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente la imagen */
+    align-items: center; /* Centra verticalmente la imagen */
+  }
+
+  .photo img {
+    max-width: 100%; /* Establece el ancho máximo de la imagen al 100% del contenedor */
+    max-height: 100%; /* Establece la altura máxima de la imagen al 100% del contenedor */
+    object-fit: cover; /* Escala la imagen para que cubra todo el contenedor sin distorsión */
+    border-radius: 50%;
   }
 
   .info {
     text-align: center; /* Centra el texto en resoluciones pequeñas */
   }
 
-  .btn-primary {
-    margin-right: 0;
-    margin: 10px; /* Agrega espacio entre los botones en resoluciones pequeñas */
+  .botones {
+    flex-direction: column; /* Cambia la dirección de los botones a columna en resoluciones pequeñas */
+    align-items: center; /* Centra horizontalmente los botones */
   }
+
+.Btn {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centra vertical y horizontalmente el contenido de los botones */
+    width: auto; /* Permitir que los botones se ajusten automáticamente según el contenido */
+    height: 45px;
+    border: none;
+    padding: 0px 20px;
+    background-color: #57a7a5;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 5px 5px 0px #088a88;
+    transition-duration: .3s;
+  }
+
 
   h1 {
     margin-top: 20px; /* Agrega espacio entre el h1 y la foto en resoluciones pequeñas */
