--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 .content {
   margin-left: 0%;
   margin-top: 5%;
 }
 
 .section-title {
+  font-family: "Comfortaa", sans-serif;
   font-size: 30px;
   font-weight: bold;
   color: #088a88;
