--- a/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -13,6 +15,7 @@ body {
 
 
  h2 {
+  font-family: "Comfortaa", sans-serif;
   margin-bottom: 20px;
   color: #088a88;
   font-size: 25px;
