--- a/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -20,6 +22,7 @@ input{
 }
 
 .title_register {
+  font-family: "Comfortaa", sans-serif;
   font-size: 35px;
   margin: 30px 0;
   text-align: center;
