--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -6,6 +8,7 @@ body {
 }
 
 h2{
+  font-family: "Comfortaa", sans-serif;
   margin-bottom: 30px;
   text-align: center;
   color: #088a88;
