--- a/sextoTrimestre/proyecto/src/app/components/marlon/estadisticas/estadisticas.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/estadisticas/estadisticas.component.html
@@ -1,32 +1,26 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<nav class="navbar">
-  <div class="container-fluid">
-    <a class="nav-link nombre" >Acanner</a>
-        <div class="menu-icon" (click)="toggleMenu()">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-        <ul [ngClass]="{'nav': true, 'show-menu': isMenuOpen}">
-            <li class="nav-item">
-              <a routerLink="/vista-instructor" class="nav-link" aria-current="page">Inicio</a>
-            </li>
-            <div class="dropdown">
-              <button class="dropdown-button" (click)="toggleProfileMenu()">
-                <span class="material-symbols-outlined">person</span>
-              </button>
-              <div class="dropdown-content" *ngIf="mostrarMenuPerfil" >
-                <li class="nav-item">
-                  <a routerLink="/perfil" class="nav-link otro " aria-current="page">Ver Perfil</a>
-                </li>
-                <li class="nav-item">
-                  <a routerLink="/estadisticas" class="nav-link otro ">Estadísticas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
-                </li>
-              </div>
-            </div>
-        </ul>
+<div class="container">
+  <!-- Título para la primera fila de gráficas -->
+  <h3 class="chart-title">Gráficas de Estadísticas</h3>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h4 class="chart-subtitle">Cantidad de Blogs Subidos</h4>
+      <div id="blogsPorInstructorChart"></div>
+    </div>
+    <div class="col-md-6">
+      <h4 class="chart-subtitle">Cantidad de Guías Subidas</h4>
+      <div id="guiasPorInstructorChart"></div>
+    </div>
   </div>
-</nav>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h4 class="chart-subtitle">Cantidad de Horarios</h4>
+      <div id="horariosChart"></div>
+    </div>
+    <div class="col-md-6">
+      <h4 class="chart-subtitle">Cantidad de Asistencias</h4>
+      <div id="asistenciasChart"></div>
+    </div>
+  </div>
+</div>
