--- a/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.css
@@ -1,71 +1,49 @@
-.perfil-detalle {
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
+
+.container {
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     max-width: 500px;
-    width: 80%;
+    height: 755px;
     position: absolute;
-    top: 55%;
+    top: 75%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-}
-
-.card-img-top.small-centered {
-    border-radius: 50%;
-    max-width: 150px;
-    margin: 0 auto;
-    display: block;
-}
-
-
-.nav-img{
-    width: 40px;
-    align-items: center;
-    display: block;
-
-}
-
-.navbar {
-    display: flex;
-    align-items: center;
-}
-
-.nombre {
-    font-weight: bold;
-    flex-grow: 15;
-    text-align: center;
-}
-
-button {
-    margin: 10px;
+  }
+  
+  button {
     background-color: #088a88;
-    color: #fff;
-    padding: 10px 20px;
+    color: #fff; /* Color del texto */
+    padding: 10px 20px; /* Ajusta el tamaño del botón según tus necesidades */
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin: 10px;
   }
-
-
-  .button:hover {
-    background-color: #159997;
+  
+  button:hover {
+    margin-top: 10px;
+    background-color: #159997; /* Nuevo color al pasar el mouse sobre el botón */
   }
-
-.information{
-    text-align: left;
-}
-
-h1 {
+  
+  h4 {
+    font-size: 40px;
     font-weight: bold;
-    flex-grow: 15;
     text-align: center;
     color: #088a88;
-}
-
-
+  }
+  .imagen {
+    margin-top: 70px;
+    margin-left: 700px;
+    height: 450px;
+    width: 500px;
+    border-radius: 10px;
+  }
 .error-message {
   background-color: rgba(235, 74, 74, 0.7);
   color: white;
@@ -75,4 +53,129 @@ h1 {
   text-align: center;
   padding: 8px;
 }
+label{
+    font-weight: bold;
+    margin: 10px;
+}
+  
+  
+  
 
+nav{
+  background-color: #008a88;
+}
+
+/* Estilos para el menú hamburguesa */
+.nav .nav-item {
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.nav-link {
+  color: white;
+}
+
+.nav-link:hover{
+  color: rgb(14, 13, 13);
+}
+.nombre{
+  padding: 10px;
+  color: white;
+  font-size: 25px;
+  font-family: 'Lobster',sans-serif;
+}
+
+.menu-icon {
+  cursor: pointer;
+  display: none;
+}
+
+.menu-icon .bar {
+  width: 20px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+/* Estilos para mostrar el menú cuando isMenuOpen es verdadero */
+.show-menu .menu-icon {
+  display: block;
+}
+
+.show-menu .nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.show-menu .nav-item {
+  margin: 10px 0;
+}
+
+/* Estilos para el menú hamburguesa en pantallas más pequeñas (500px o menos) */
+@media (max-width: 700px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .menu-icon {
+    cursor: pointer;
+    display: block;
+    margin-right: 20px;
+  }
+
+  /* Estilos para mostrar el menú en pantallas pequeñas */
+  .show-menu .nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .show-menu .nav-item {
+    margin: 0px 0;
+  }
+
+  .show-menu{
+    display: block;
+  }
+}
+
+/* Estilo del dropdown */
+.otro {
+  color: #008a88;
+}
+button {
+  color: #fff;
+}
+
+.dropdown-content { 
+  margin-top: 5px;
+  position: absolute;
+  right: 0;
+  margin-right: 5px;
+  background-color: #fff; /* Color de fondo */
+  border: 1px solid #ccc; /* Borde del menú */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 10px; 
+  padding: 10px;
+}
+
+.dropdown-button {
+    padding: 5px;
+    font-size: 16px;
+    border: none;
+    background-color: #008a88;
+}
+
+.dropdown-item {
+  text-decoration: none;
+  display: block;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #070707;
+}
