--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.scss
@@ -57,7 +57,7 @@
 .date{
   font-weight: bolder;
   margin-top: auto;
-  text-align: right;
+  text-align: center;
 }
 .noticias-container {
   display: flex;
