--- a/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.scss
@@ -176,3 +176,46 @@ h1{
     margin-top: 20px; /* Agrega espacio entre el h1 y la foto en resoluciones pequeñas */
   }
 }
+.foto:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  filter: brightness(80%);
+}
+
+.eliminar-icono {
+  position: absolute;
+  top: 45%;
+  left: 48%;
+  transform: translate(-50%, -50%);
+  color:#5a0707;
+  background-color: rgba(255, 255, 255, 0.457);
+  padding: 5px;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 10;
+}
+
+.foto-container:hover .eliminar-icono {
+  opacity: 1;
+  visibility: visible;
+}
+
+.foto-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.foto {
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  margin-right: 20px;
+  border: 2px solid #088a88;
+  border-radius: 50%;
+  overflow: hidden;;
+}
+
+.eliminar-icono {
+  cursor: pointer;
+}
