--- a/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
@@ -62,14 +62,11 @@
     <div *ngIf="errorMensaje" class="alert alert-danger" role="alert">
       {{ errorMensaje }}
     </div>
-    <div *ngIf="mostrarAlertaActiva" class="alert alert-info" role="alert">
-      {{ mensajeAlerta }}
-    </div>
-    <div *ngIf="mostrarAvisoTresFallas" class="alert alert-warning" role="alert">
-      ¡Atención! Estás iniciando proceso de deserción por 3 fallas consecutivas.
-    </div>
-    <div *ngIf="mostrarAvisoCincoFallas" class="alert alert-danger" role="alert">
-      ¡Atención! Estás en proceso avanzado de deserción por acumular 5 fallas.
+    <div *ngIf="mostrarAlertaActiva" class="alert-container">
+      <div class="alert-message">
+        {{ mensajeAlerta }}
+        <button (click)="ocultarAlerta()">Cerrar</button>
+      </div>
     </div>
     <table #tablaAsistencias class="table" *ngIf="asistenciaList.length > 0">
       <thead>
